--- a/Development/jsDeveloper.html
+++ b/Development/jsDeveloper.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>التمرين الأول</title>
+    <script src="./js/scripts.js"></script>
   </head>
-  <body></body>
+  <body>
+    <p id="demo"></p>
+  </body>
 </html>
